# stats426_project

./: .gitignore  pyproject.toml  stats_426_project.ipynb
results/: results.md
src/: DenseNET-2.ipynb  DenseNET.ipynb  baseline.py  cnn.py  cnn_augmented.py  mlp.py  utils.py
