[project]
name = "stats426-project"
version = "0.1.0"
description = "ASL Sign Language Classification - Stats 426 Final Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "torchvision>=0.15",
]
